# SupervisedFX

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
RQ1/: analyze.py  constants.py  custom_a2c_policy.py  environment.py  eval.py  experiments.py  experiments_basic.py  experiments_cnn.py  main.py  network_cnn.py  network_shapes.py  network_sizes.py  parameters.py  preprocess.py  rq1.py  scripts.py  some_feature_engineers.py  test.py  test_feature_engineer.ipynb  train.py  utils.py
RQ1/docs/: project_domain.md
RQ2/: ForexEnv.py  constants.py  experiments.py  feature_engineer_factory.py  final_experiments.py  hyperparameter_experiments.py  main.py  parameters.py  real_experiments.py  run_baselines.py  run_benchmarks.py  run_experiments.py  run_final_experiments.py  run_hyperparameter_experiments.py  run_singular_experiment.py  temp.py  test2.py  test3.py  test_plotting.ipynb
RQ2/successfullish_experiments/: run_30m_convergence_on_eval_questionmark.py  run_overfit_for_life_experiment.py  run_overfit_for_life_v2.py
RQ5/: ForexEnv_RQ5.py  baseline_first.ipynb  boltzmann_dqn.py  main.py  new_env.ipynb  noisy_dqn.py  running_script.py  script_rq1_env.py  train_general_forex_env.py  training_script.py
RQ5/common/: README.md  checkForMissingMinutes.ipynb  scripts.py
RQ5/common_rq5/: constants.py  data.py  scripts.py
RQ5/data/: eurusd_hourly.csv
RQ5/secondary/: ForexEnv_RQ1.py  script_rq1_env.py
common/: analysis.py  constants.py  cuda.py  data.py  optimization.py  rewards.py  scripts.py  trainertester.py
common/data/: data.py  feature_engineer.py  reward_functions.py  stepwise_feature_engineer.py  utils.py
common/debug/: imports.py  move_legend.py
common/envs/: README.md  callbacks.py  curiosity.py  dp.py  forex_env.py  rewards.py  trade.py
common/feature/: feature_engineer.py  stepwise_feature_engineer.py
common/models/: analysis.py  dummy_models.py  experiment.py  models.py  train_eval.py  utils.py
data/: README.md  data.py
data/dp_cache/: dp_table_a15_e15_tc0p0000_data4bc195883b238efe.npz  dp_table_a15_e15_tc0p0000_data8dc7f1c8ded425bf.npz  dp_table_a15_e15_tc0p0001_data060a298868c10759.npz  dp_table_a15_e15_tc0p0001_data6cae5684c518dd44.npz  dp_table_a15_e15_tc0p0001_data81c45467128729bb.npz  dp_table_a3_e15_tc0p0001_data6cae5684c518dd44.npz  (+1 more)
docs/: project_domain.md
src/: constants.py  main.py  scripts.py
tests/: test_dp.py
(+90 files in other folders)
