[project]
name = "tud-cse-rp-rlinfinance"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finrl (>=0.3.5,<0.4.0)",
    "stable-baselines3[extra] (>=2.0.0,<3.0.0)",
    "matplotlib (>=3.6.0,<4.0.0)",
    "seaborn (>=0.12.0,<0.13.0)",
    "plotly (>=5.10.0,<6.0.0)",
    "jupyter (>=1.0.0,<2.0.0)",
    "notebook (>=6.5.0,<7.0.0)",
    "jupyterlab (>=3.5.0,<4.0.0)",
    "ipykernel (>=6.15.0,<7.0.0)",
    "ipywidgets (>=8.0.0,<9.0.0)",
    "tqdm (>=4.64.0,<5.0.0)",
    "stockstats (>=0.4.0,<0.5.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ta (>=0.11.0,<0.12.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
]

[tool.poetry]
packages = [
    { from = ".", include = "*" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"

